--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "amazon-cognito-identity-js": "^5.2.12",
     "bootstrap": "^5.2.2",
     "lodash.clonedeep": "^4.5.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
